<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TrashGrav</string>
    <string name="app_slogan" translatable="false">Welcome to TrashGrav community,
        are you ready to make a change to the environment and earn ? </string>
    <string name="welcome_text_note">We\'ll text you to confirm your number. Standard message and data rates apply.</string>
    <string name="welcome_text_phone">Phone number</string>
    <string name="welcome_text_or">or</string>
    <string name="welcome_login">Let\'s join our community</string>
    <string name="welcome_cont_btn">Continue</string>
    <string name="welcome_google_cont_btn">Continue with Google</string>
    <string name="welcome_facebook_cont_btn">Continue with Facebook</string>

    <string name="welcome_verify_title">Verify your number</string>
    <string name="welcome_verify_btn">Verify</string>
    <string name="welcome_verify_resend_text" translatable="false">↺</string>
    <string name="welcome_verify_cancel_text">Wrong number?</string>
    <string name="welcome_verify_cancel_text_btn">Change</string>

    <string name="snackbar_error_text">Something went wrong..</string>
    <string name="snackbar_detail_text">Details</string>
    <string name="welcome_resend_toast_msg">Resent verification code</string>

    <string name="register_profile_picture_hint_text">Click the profile picture to change</string>
    <string name="register_first_name_text">First name</string>
    <string name="register_last_name_text">Last name</string>
    <string name="register_email" translatable="false">Email</string>
    <string name="register_first_name_hint">Ex: Marcus</string>
    <string name="register_last_name_hint">Ex: Aurelius</string>
    <string name="register_email_hint" translatable="false">Ex: example@trash.grav</string>
    <string name="register_cont_btn_text">Register</string>

    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>

    <string name="voucher_detail_point">Points</string>
    <string name="voucher_detail_validity">Validity</string>
    <string name="voucher_detail_highlight">Highlight</string>
    <string name="voucher_detail_description">Description</string>
    <string name="voucher_detail_terms">Terms and Conditions</string>
    <string name="voucher_detail_contacts">Contact info</string>
    <string name="voucher_detail_redeem">Redeem</string>

    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="already_have_account">Already a member ? Sign in</string>
    <string name="no_account"> Not a member yet ? Sign up </string>
    <string name="facebook_app_id">662015067908643</string>
    <string name="fb_login_protocol_scheme">fb662015067908643</string>
    <string name="title_activity_driver_main">DriverMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>


</resources>
